seldon-deploy-install/prerequisites-setup/manifests/envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: authn-filter
  namespace: istio-system
spec:
  workloadLabels:
  #include namespace in the label to avoid clashes across namespaces
    istio: ingressgateway
  filters:
  - filterConfig:
      httpService:
        serverUri:
          uri: http://authservice.istio-system.svc.cluster.local
          cluster: outbound|8080||authservice.istio-system.svc.cluster.local
          failureModeAllow: false
          timeout: 10s
        authorizationRequest:
          allowedHeaders:
            patterns:
            - exact: "cookie"
            - exact: "X-Auth-Token"
            - exact: "kubeflow-userid"
            - exact: "kubeflow-userid-token"
        authorizationResponse:
          allowedUpstreamHeaders:
            patterns:
            - exact: "cookie"
            - exact: "X-Auth-Token"
            - exact: "kubeflow-userid"
            - exact: "kubeflow-userid-token"
      statusOnError:
        code: GatewayTimeout
    filterName: envoy.ext_authz
    filterType: HTTP
    insertPosition:
      index: FIRST
    listenerMatch:
      listenerType: GATEWAY
